# seaview

./: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pixi.toml  pyproject.toml  settings.toml
docs/: index.md
docs/api/: area_definitions.md  cli.md  config.md  index.md  layer_config.md  processor.md  tile.md
docs/api/data_sources/: cmems_ssh.md  gebco_bathy.md  globcolour.md  olci_L2.md  ostia.md
docs/api/readers/: copernicus_ssh.md
docs/api/tilers/: rectlinear.md  utils.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: data-sources.md  layer-config.md  overview.md  tile-generation.md
src/processor/: __init__.py  config.py  layer_config.py  process_day.py  tile.py
src/processor/data_sources/: cmems_ssh.py  globcolour.py  ostia.py
src/processor/tilers/: rectlinear.py
src/seastate/: __init__.py  cli.py
src/seastate/data_sources/: cmems_ssh.py  globcolour.py  ostia.py
src/seastate/tilers/: rectlinear.py
src/seaview/: __init__.py  cli.py  config.py  layer_config.py  tile.py  utils.py
src/seaview/data_sources/: cmems_ssh.py  gebco_bathy.py  globcolour.py  ostia.py
src/seaview/tilers/: rectlinear.py
